# twitch-notifier

./: .cursorignore  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.toml  CHANGELOG.md  Cargo.toml  Plan.md  README.md  cliff.toml  config.example.toml
.cursor/rules/: plan.mdc
src/: main.rs  notifications.rs  twitch_api.rs
